--- a/Calendar/templates/calendar.html
+++ b/Calendar/templates/calendar.html
@@ -4,12 +4,13 @@
 <script type=text/javascript src="{{url_for('static', filename='js/form.js') }}"></script>
 <script type=text/javascript src="{{url_for('static', filename='js/button_appear.js') }}"></script>
 
-<div id="errorAlert" class="alert alert-warning" role="alert" style="display:none;"></div>
+<div id="errorAlert" class="alert alert-danger" role="alert" style="display:none;text-align:center;"></div>
 
 <div class=container id=main_content>
   <div id=calendar_content>
     <div class="card">
       <div class="card-body">
+        <h2 style="text-align:center;">{{month_name}}</h2>
         <table class="table table-bordered">
           <thead>
             <tr>
@@ -280,6 +281,7 @@
               </div>
 
               <input type="hidden" id="event_date" value="{{i}}">
+              <input type="hidden" id="event_month" value="{{month_name}}">
 
               <button type="submit" class="btn btn-primary">submit</button>
             </form>
