Set up database, /events now shows all the events entered

--- a/Calendar/templates/calendar.html
+++ b/Calendar/templates/calendar.html
@@ -50,7 +50,8 @@
         {% for i in range(31) %}
         <div class="collapse" id="collapseEvents{{i}}" data-parent="#calendar_content">
           <div class="card card-body">
-            <h2> Events </h2>
+            <h2 style="text-align:center;"> Events </h2>
+            <a class="btn btn-primary" href="/events" role="button" style="display:inline-block">See All Events</a>
             <p id="event_title_display"></p>
             <p id="start_time_display"></p>
             <p id="end_time_display"></p>
